fix https://mantis.phplist.org/view.php?id=18821 (Click statistics page click count and user button have no spacing), and also fix same problem in url clicks (uclicks page)

--- a/less/legacy.less
+++ b/less/legacy.less
@@ -279,8 +279,8 @@ body.importadmin table.table tr td:first-child{
 	}           
 }
 
-/* ## user */
-body.user table.userAdd .btn-xs{margin-left:10px}
+/* ## user && userclicks && uclicks*/
+body.uclicks span.viewusers, body.userclicks span.viewusers,body.user table.userAdd .btn-xs{margin-left:10px}
 
 /* ## send */
 body.send #sendtabs .btn {margin:0px;padding:5px}
